# learn

./: .gitignore  Cargo.toml  README.md
allocate/: Cargo.toml
allocate/src/: lib.rs
arrow-vs-arrow2/: Cargo.toml  perf-arrow2-datafuse.html
arrow-vs-arrow2/benches/: aggr1.rs  aggr2.rs  cast_kernels.rs  example.rs  results.txt
arrow-vs-arrow2/examples/: appender.rs
arrow-vs-arrow2/src/: lib.rs
chan/: Cargo.toml
nome/: Cargo.toml
nome/src/: main.rs
serde/: Cargo.toml
serde/src/: lib.rs
