[package]
name = "arrow-vs-arrow2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "5.0.0"

arrow2 = {  git="https://github.com/datafuse-extras/arrow2", branch = "main" }
arrow-flight = { git="https://github.com/datafuse-extras/arrow2",branch = "main" }

parquet = {package = "parquet2", git = "https://github.com/datafuse-extras/parquet2", branch = "main"}

[features]
default = ["simd"]
simd = ["arrow/simd"]

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "aggr1"
harness = false

[[bench]]
name = "aggr2"
harness = false