[package]
name = "arrow-vs-arrow2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "5.0.0"
arrow2 =  "0.8.0"
parquet2 = { version = "0.8", optional = true, default_features = false, features = ["stream"] }


[features]
default = ["simd"]
simd = ["arrow/simd"]

[dev-dependencies]
rand = "0.8"
criterion = "0.3.5"
pprof = { version = "0.5.0", features = ["flamegraph", "criterion"] }
num-traits = "0.2.0"

[[bench]]
name = "aggr1"
harness = false

[[bench]]
name = "example"
harness = false

[[bench]]
name = "aggr2"
harness = false

[[bench]]
name = "cast_kernels"
harness = false


